# avalanchers

./: .gitignore  Cargo.toml  README.md  avalanchers_example.ipynb  avalanchers_example.py  index.html  matter_postprocess.ipynb  pyproject.toml  settings.json  settings_vals_all_pra.json  settings_vals_example.json
.github/workflows/: CHANGELOG.md  build.yaml  gh-pages-deploy.yaml  release.yaml  sftp-deploy.yaml
avalanchers/: __init__.py
cli/: Cargo.toml
cli/src/: main.rs
compute_core/: Cargo.toml
compute_core/src/: buffers.rs  dem.rs  lib.rs  settings.rs  shaders.rs  utils.rs
crates/cli/: Cargo.toml  settings.json
crates/cli/src/: main.rs
crates/compute_core/: Cargo.toml  settings.json
crates/compute_core/src/: buffers.rs  dem.rs  lib.rs  settings.rs  shaders.rs  utils.rs
crates/compute_core/src/shaders/: analyze_terrain.wgsl  computeWindShelter.wgsl  compute_grid_physics.wgsl  compute_normals.wgsl  compute_particles.wgsl  compute_release_areas.wgsl  compute_roughness.wgsl  grid_physics.wgsl  initialize_particles.wgsl  load_release_areas.wgsl  p2g.wgsl  random.wgsl  reset_grid.wgsl  reset_max_velocity.wgsl  update_sim_info.wgsl  utils.wgsl
crates/compute_core/wgsl/: computeTrajectories.wgsl  computeWindShelter.wgsl  compute_normals.wgsl  compute_particles.wgsl  compute_release_areas.wgsl  compute_roughness.wgsl  initialize_particles.wgsl  load_release_areas.wgsl  roughness.wgsl  test.wgsl
crates/data_processor/: Cargo.toml  data_processor.ipynb  test.py
crates/data_processor/benches/: benchmarks.rs
crates/data_processor/src/: lib.rs
crates/python_bindings/: Cargo.toml
crates/python_bindings/src/: lib.rs
crates/python_bindings/test_python/: test_bindings.py
crates/simulation/: Cargo.toml
crates/simulation/benches/: sim_benchmark.rs
crates/simulation/src/: lib.rs
crates/wasm_bindings/: Cargo.toml
crates/wasm_bindings/src/: lib.rs
data/avaframe/: avaAlr.aabb  avaArzlerUni.aabb  avaBowl.aabb  avaBowl.rp  avaChannel.aabb  avaDamBreak.aabb  avaDamBreak.json  avaDamBreak.rp  avaFPtest.json  avaFlatPlane.rp  avaFlowPy.aabb  avaFlowPy.json  avaGar.rp  avaHelix.rp  avaHit.aabb  avaHit.rp  avaHockeyChannel.rp  avaHockeySmall.rp  avaHof.aabb  avaParabola.rp  avaPfa.json  avaPfa.rp  avaPyramid.aabb  avaPyramid45.aabb  avaPyramid45.rp  avaSimilaritySol.aabb  avaSlide.aabb  avaWog.aabb  avaWog.rp
data/lawis/: lawis_analysis.ipynb  requirements.txt
data_processor/: Cargo.toml
data_processor/src/: lib.rs
frontend/: dev_server.py  index.html
frontend/data/avaframe/: avaAlr.rp  avaArzlerUni.rp  avaChannel.rp  avaFPtest.aabb  avaFPtest.rp  avaGar.aabb  avaHelixChannel.rp  avaHof.rp  avaInclinedPlane.aabb  avaInclinedPlane.rp  avaKot.aabb  avaKot.rp  avaMal.aabb  avaMal.rp  avaPfa.aabb  avaPyramid.rp  avaSimilaritySol.json  avaSlide.json  avaSlide.rp  avaTripleBowl.json  avaTripleBowl.rp
frontend/js/: main.js  plot.js  plotly_dark.js  tile_utils.js  utils.js
frontend/js/pkg/: avalanchers_bg.wasm
js/: export.js  gpu.js  main.js  plot.js  tile_utils.js  utils.js
js/pkg/: avalanchers.js  avalanchers_bg.wasm
python/: avalanchers_example.ipynb  avalanchers_example.py
python/avalanchers/: __init__.py
python/tests/: test_run.py
python_module/avalanchers/: __init__.py
python_scripts/: requirements.txt
wasm/: Cargo.toml
wgsl/: computeNormals.wgsl  computeParticles.wgsl  computeReleasePoints.wgsl  computeRoughness.wgsl  compute_normals.wgsl  compute_particles.wgsl  compute_release_areas.wgsl  initializeParticles.wgsl  initialize_particles.wgsl  loadReleasePoints.wgsl  load_release_areas.wgsl  random.wgsl  resetMaxVelocity.wgsl  reset_max_velocity.wgsl  roughness.wgsl  util.wgsl  utils.wgsl
