[workspace]
members = [
    "crates/cli", 
    "crates/data_processor",
    "crates/wasm_bindings", 
    "crates/compute_core", 
    "crates/python_bindings"]
resolver = "3"


[workspace.dependencies]
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
test-log = { version = "0.2", features = ["trace"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0" 
anyhow = "1.0" # General-purpose error handling
env_logger = "0.11"
pollster = "0.4" # For async execution in native

compute_core = { path = "crates/compute_core" }
wgpu = "29.0"
regex = "1.11"
rand = "0.9"
bytemuck = { version = "1.25", features = ["derive"] }
tempfile = "3.20"
futures-intrusive = "0.5"

data_processor = { path = "crates/data_processor" }
zstd = "0.13"
xz2 = "0.1"
lz4_flex = "0.11"
bincode = "2.0"
image = "0.25" 
half = "2.6"

# python
pyo3 = { version = "0.28", features = ["extension-module", "abi3-py37"] }
numpy = "0.28" 
ndarray = "0.17"
pyo3-log = "0.13"

# wasm
js-sys = "0.3"
wasm-bindgen = "0.2" 
wasm-bindgen-futures = "0.4" 
web-sys = { version = "0.3", features = ["Window", "Document"] }
console_error_panic_hook = "0.1.7"

# cli
clap = { version = "4.6", features = ["derive"] }

