[package]
name = "compute_core"
version = "0.1.0"
edition = "2024"

[dependencies]
data_processor = { path = "../data_processor" } 
wgpu = { workspace = true }
pollster = { workspace = true, optional = true } # Only for native environments
anyhow = { workspace = true }
bytemuck = { workspace = true }
tempfile = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
# For WASM specifics when compiled for web
wasm-bindgen = { version = "0.2", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }
js-sys = { version = "0.3", optional = true }
image = { workspace = true }
futures-intrusive = { workspace = true }
rand  = { workspace = true }
flate2 = "1.1"
half = { workspace = true, features = ["bytemuck"]}
regex = "1.11.1"

[features]
# Feature to enable async blocking for native compilation
native = ["pollster"]
# Feature to enable WASM-specific bindings
wasm = ["wasm-bindgen", "wasm-bindgen-futures", "js-sys"]

[dev-dependencies]
pollster = { workspace = true }
