[package]
name = "data_processor"
version = "0.1.0"
edition = "2024"

[lib]
name = "data_processor"
crate-type = ["cdylib", "rlib"] # This is essential for Python bindings

[dependencies]
pyo3 = { version = "0.25", features = ["extension-module", "macros", "serde"], optional = true }
numpy = { version = "0.25", optional = true }
ndarray = { version = "0.16", optional = true }
bincode = "2.0"
half = { workspace = true}
lz4_flex = "0.11"
image = { workspace = true}
zstd = "0.13"
xz2 = "0.1"

[dev-dependencies]
criterion = "0.7"

[features]
default = ["pyo3", "numpy", "ndarray"]
python = ["pyo3", "numpy", "ndarray"]