[package]
name = "wasm"
version = "0.1.0"
edition = "2024"

[dependencies]
compute_core = { path = "../compute_core"} #, features = ["wasm"] }
#wasm-bindgen = { workspace = true }
#wasm-bindgen-futures = { workspace = true }
#js-sys = { workspace = true }
#web-sys = { workspace = true, features = ["Window", "Document"] } # if you need it
#anyhow = { workspace = true } # Need to add this as well
