[package]
name = "data_processor"
version = "0.1.0"
edition = "2024"

[lib]
name = "data_processor"
crate-type = ["cdylib", "rlib"] # This is essential for Python bindings

[dependencies]
bincode = { workspace = true}
half = { workspace = true}
image = { workspace = true}
tracing = { workspace = true}
zstd = { workspace = true }
lz4_flex = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
xz2 = "0.1"

[dev-dependencies]
criterion = "0.7"
test-log = { workspace = true}
