[package]
name = "data_processor"
version = "0.1.0"
edition = "2024"

[lib]
name = "data_processor"
crate-type = ["cdylib", "rlib"] # This is essential for Python bindings

[dependencies]
compute_core = { workspace = true }
bincode = { workspace = true}
half = { workspace = true}
image = { workspace = true}
tracing = { workspace = true}
lz4_flex = { workspace = true }
reqwest = { workspace = true }
tiff = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
xz2 = "0.1"
[target.'cfg(not(all(target_os = "unknown", target_arch = "wasm32")))'.dependencies]
zstd = "0.13"

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { workspace = true }

[dev-dependencies]
criterion = "0.7"
test-log = { workspace = true}
wiremock = { workspace = true }
tokio = { workspace = true }
tempfile = { workspace = true }
pollster = { workspace = true }
