[package]
name = "wasm_bindings"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]
name = "avalanchers"

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4" # Essential for async/await in WASM
js-sys = "0.3"
console_error_panic_hook = { workspace = true }
compute_core = { workspace = true }
#data_processor = { workspace = true }
#wasm-bindgen = { workspace = true }
#wasm-bindgen-futures = { workspace = true }
#js-sys = { workspace = true }
#web-sys = { workspace = true, features = ["Window", "Document"] } # if you need it
#anyhow = { workspace = true } # Need to add this as well
