[package]
name = "wasm_bindings"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]
name = "avalanchers"

[dependencies]
console_error_panic_hook = { workspace = true }
compute_core = { workspace = true }
data_processor = { workspace = true }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
js-sys = { workspace = true }
#web-sys = { workspace = true, features = ["Window", "Document"] } # if you need it
#anyhow = { workspace = true } # Need to add this as well
getrandom03 = { version = "0.3", features = ["wasm_js"], package = "getrandom" }
getrandom = { version = "0.4", features = ["wasm_js"] }
